# hermes-aaai27

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/backend/: heterogeneous_cloud.yaml  homogeneous.yaml
configs/dataset/: qemfi.yaml  qemfi_debug.yaml
configs/experiment/: qemfi_m0_debug.yaml  qemfi_m0_main.yaml
docs/: STEP4_QEMFI_DATA_LAYER_DESIGN.md
scripts/: download_qemfi.py  plot_qemfi_m0.sh  run_qemfi_debug.sh  run_qemfi_m0.sh
src/hermes/: __init__.py
src/hermes/acquisition/: __init__.py  candidate_generator.py  diversity.py  fantasies.py  scoring.py  source_reliability.py  value_function.py
src/hermes/core/: __init__.py  backend.py  event_simulator.py  job.py  replay_oracle.py  runtime_model.py  source.py  state.py  types.py
src/hermes/data/: __init__.py  qemfi_evaluator.py  qemfi_features.py  qemfi_loader.py  qemfi_schema.py  qemfi_splits.py  splits.py  (+1 more)
tests/: __init__.py  conftest.py  qemfi_test_utils.py  test_backend_capacity.py  test_baseline_fairness.py  test_budget_constraints.py  test_budget_feasibility.py  test_core_api.py  test_duplicate_constraints.py  test_duplicate_prevention.py  test_event_ordering.py  test_event_simulator.py  test_no_runtime_leakage.py  test_project_scaffold.py  test_qemfi_config_validation.py  test_qemfi_evaluator_privacy.py  test_qemfi_feature_safety.py  test_qemfi_loader_synthetic.py  test_qemfi_oracle_boundary.py  test_qemfi_runtime_leakage.py  test_qemfi_simulator_integration.py  test_qemfi_split_logic.py  test_runtime_leakage.py  test_scheduler_api.py  test_scheduler_api_constraints.py
(+28 files in other folders)
